--- a/src/Range/Range.css
+++ b/src/Range/Range.css
@@ -1,6 +1,8 @@
 .Range {
   display: block;
   min-width: 0;
+  height: 0;
+  padding: var(--size--x4) var(--size--x2);
   border: 0;
   border-radius: 0;
   background: none;
